Added extension.xml Updated ant script
git-svn-id: http://svn.projects.ez.no/sqligeoloc@8 ff1ad0b9-3cf4-4f89-bcfd-b74ce15286e0

--- a/trunk/ant/build.xml
+++ b/trunk/ant/build.xml
@@ -15,7 +15,7 @@
 	
 	<target name="package" depends="init,export" description="Builds the package">
 		<replace dir="${build.dir.dist}" token="@@@VERSION@@@" value="${build.version}">
-			<include name="**/*.php"/>
+			<include name="**/*.php,extension.xml"/>
 		</replace>
 		<zip destfile="${build.dir}/sqligeoloc.zip" basedir="${build.dir.dist}" excludes="${build.dir.dist.extension}/ant/**,${build.dir.dist.extension}/tests/**"/>
 	</target>
