--- a/trunk/ant/build.xml
+++ b/trunk/ant/build.xml
@@ -15,7 +15,8 @@
 	
 	<target name="package" depends="init,export" description="Builds the package">
 		<replace dir="${build.dir.dist}" token="@@@VERSION@@@" value="${build.version}">
-			<include name="**/*.php,extension.xml"/>
+			<include name="**/*.php"/>
+			<include name="**/extension.xml"/>
 		</replace>
 		<zip destfile="${build.dir}/sqligeoloc.zip" basedir="${build.dir.dist}" excludes="${build.dir.dist.extension}/ant/**,${build.dir.dist.extension}/tests/**"/>
 	</target>
